# elbike-power_meter

./: .env.example  .gitignore  2.ods  3.ods  Cargo.toml  Directory.Packages.props  README.md  SCTB_HIDI2C_I2CDotNet.sln  dump1.txt  dump2.txt  dump3.txt  flash.wsl.sh  monitor.wsl.sh
.cargo/: config.toml
.gitea/workflows/: build.yaml
elbike-host-test/: Cargo.toml
elbike-host-test/src/: main.rs
libs/eeprom-log/: Cargo.toml
libs/eeprom-log/src/: lib.rs
libs/eeprom24x-rs/src/: lib.rs
libs/software-i2c/: Cargo.toml
libs/software-i2c/src/: errors.rs  lib.rs  nanosecond_delay.rs  shared_i2c_bus.rs  single_client.rs
src/: config.rs  controller2bc_parcer.rs  display.rs  logger.rs  main.rs  nanosecond_delay_provider.rs  uart0_cfg.rs
