[package]
name = "elbike-power-meter"
version = "0.1.0"
authors = ["ololoshka2871 <SweetTreasure@2ch.hk>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
num = { version = "0.4", default-features = false }
##esp-idf-alloc = "0.1.1"
esp8266-hal = { path = "libs/esp8266-hal" }
panic-halt = "0.2.0"
xtensa-lx = "0.7.0"
xtensa-lx-rt = { version = "0.13.0", optional = true, features = ["esp8266"] }

# display
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1" 

[profile.release]
lto = true
