[package]
name = "elbike-power-meter"
version = "0.1.0"
authors = ["ololoshka2871 <SweetTreasure@2ch.hk>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
num = { version = "0.4", default-features = false }
##esp-idf-alloc = "0.1.1"
esp8266-hal = "0.5"
esp8266-hal-proc-macros = "0.1"
panic-halt = "0.2"
xtensa-lx = "0.7"
xtensa-lx-rt = { version = "0.13", optional = true, features = ["esp8266"] }

# display
display-interface = "0.4"
display-interface-i2c = "0.4"
ssd1306 = "0.7"
embedded-graphics = "0.7" 

esp8266-software-i2c = { path = "libs/software-i2c" }

[profile.release]
lto = true
