[package]
name = "elbike-power-meter-host-test"
version = "0.1.0"
authors = ["ololoshka2871 <SweetTreasure@2ch.hk>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
num = { version = "0.4", default-features = false }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
anyhow = "1"

serialport = "4.2"
